--- a/classes.css
+++ b/classes.css
@@ -75,6 +75,15 @@ option{
     border-color: var(--Anicsblushbeautycolor3);
     outline: none;
 }
+
+input[type = "date"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
+}
 textarea{
     width: 100%;
     padding: 10px;
